--- a/111-1模組單元課程-Pytorch實作/Code/Week01_01_database.ipynb
+++ b/111-1模組單元課程-Pytorch實作/Code/Week01_01_database.ipynb
@@ -47,6 +47,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'sklearn.datasets' from 'C:\\\\Users\\\\user\\\\Anaconda3\\\\lib\\\\site-packages\\\\sklearn\\\\datasets\\\\__init__.py'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sklearn.datasets as db\n",
+    "print(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a student, name: Tommy, Age:38.11111, Sex:1,\n",
+      "I am a student, name: A, Age:38.11111, Sex:1,\n",
+      "I am a student, name: B, Age:38.11111, Sex:1,\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print('I am a student, name: Tommy')\n",
+    "# print('I am a student, name: A')\n",
+    "# print('I am a student, name: B')\n",
+    "# print('I am a student, name: {}'.format('Tommy'))\n",
+    "\n",
+    "for name in ['Tommy','A','B']:\n",
+    "    print('I am a student, name: {}, Age:{}, Sex:{},'.format(name, 38.11111,1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
